crates/snapshots/snapshots/cli_snapshots__styles__style_keyframes.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_keyframes

--- step: migrate ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,2 +0,0 @@\n-@keyframes fade { from { opacity: 0; } to { opacity: 1; } }\n-.button { animation: fade 1s; }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"[animation:tw-migrate-633bd9959461d4d4-fade_1s]\">Save</button>;\n--- a/globals.css\n+++ b/globals.css\n@@ -1,1 +1,3 @@\n @import \"tailwindcss\";\n+\n+@keyframes tw-migrate-633bd9959461d4d4-fade { from { opacity: 0; } to { opacity: 1; } }\nApplied 3 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: "@keyframes fade { from { opacity: 0; } to { opacity: 1; } }\n.button { animation: fade 1s; }\n"
  modified Button.tsx
    before: "import styles from './Button.module.css';\nexport const Button = () => <button className={styles.button}>Save</button>;\n"
    after: "export const Button = () => <button className=\"[animation:tw-migrate-633bd9959461d4d4-fade_1s]\">Save</button>;\n"
  modified globals.css
    before: "@import \"tailwindcss\";\n"
    after: "@import \"tailwindcss\";\n\n@keyframes tw-migrate-633bd9959461d4d4-fade { from { opacity: 0; } to { opacity: 1; } }\n"
