crates/snapshots/snapshots/cli_snapshots__styles__style_less_functions.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_less_functions

--- step: migrate ---
status: 0
stdout: "--- a/Card.tsx\n+++ b/Card.tsx\n@@ -1,1 +1,1 @@\n-export const Card = () => <div className=\"child\" />;\n+export const Card = () => <div className=\"child [.card_&]:p-[13px]\" />;\nPreviewed 1 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[retained-global-rule] legacy.less:1:1-1:45 Global CSS is never deleted automatically.\n"
workspace delta:
  unchanged
