crates/snapshots/snapshots/cli_snapshots__styles__style_less_orphan.snap
---
source: crates/snapshots/tests/cli_snapshots/styles.rs
expression: document
---
case: style_less_orphan

--- step: automatic ---
status: 0
stdout: "Previewed 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
